@@ -16,7 +16,7 @@ class DBEnv(unittest.TestCase):
         test_support.rmtree(self.homeDir)
 
     if db.version() >= (4, 4) :
-        def test_mutex_set_max(self):
+        def test_mutex_setget_max(self) :
             v = self.env.mutex_get_max()
             v2 = v*2+1
 
@@ -31,6 +31,30 @@ class DBEnv(unittest.TestCase):
             self.env.open(self.homeDir, db.DB_CREATE)
             self.assertRaises(db.DBInvalidArgError,
                     self.env.mutex_set_max, v2)
+
+        def test_mutex_setget_align(self) :
+            v = self.env.mutex_get_align()
+            v2 = 64
+            if v == 64 :
+                v2 = 128
+
+            self.env.mutex_set_align(v2)
+            self.assertEqual(v2, self.env.mutex_get_align())
+
+            # Requires a nonzero power of two
+            self.assertRaises(db.DBInvalidArgError,
+                    self.env.mutex_set_align, 0)
+            self.assertRaises(db.DBInvalidArgError,
+                    self.env.mutex_set_align, 17)
+
+            self.env.mutex_set_align(2*v2)
+            self.assertEqual(2*v2, self.env.mutex_get_align())
+
+            # You can not change configuration after opening
+            # the environment.
+            self.env.open(self.homeDir, db.DB_CREATE)
+            self.assertRaises(db.DBInvalidArgError,
+                    self.env.mutex_set_align, v2)
 
 
 def test_suite():
